--- a/environnement_data.ipynb
+++ b/environnement_data.ipynb
@@ -3983,7 +3983,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "poliastro",
    "language": "python",
    "name": "python3"
   },
